swagger & report
